--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,16 @@
 
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+
+
+    </dependencies>
 
 
 
