--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <name>Checkers Javafx</name>
     <description>A checkers game with gameplay customization features.</description>
-    <url>https://github.com/czegiati/CheckersFX</url>
+    <url>https://github.com/czegiati/fxproject</url>
 
     <developers>
         <developer>
@@ -28,9 +28,9 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:czegiati/CheckersFX.git</connection>
-        <url>scm:git:git@github.com:czegiati/CheckersFX.git</url>
-        <developerConnection>scm:git:git@github.com:czegiati/CheckersFX.git</developerConnection>
+        <connection>scm:git:git@github.com:czegiati/fxproject.git</connection>
+        <url>scm:git:git@github.com:czegiati/fxproject.git</url>
+        <developerConnection>scm:git:git@github.com:czegiati/fxproject.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -98,10 +98,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.6</version>
+                <version>3.7.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>3.0.0-M1</version>
@@ -148,7 +153,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
@@ -184,6 +189,36 @@
                     </additionalOptions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>game.Main</mainClass>
+                                </transformer>
+
+                              <transformer implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
+                                    <resource>records.xml</resource>
+                                </transformer>
+
+                               <!-- <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                <resource>rc/main/resources/records</resource>
+                                <file>records.xml</file>
+                                </transformer>-->
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
         </plugins>
     </build>
@@ -191,11 +226,6 @@
     <reporting>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -224,20 +254,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.3</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>dependency-updates-report</report>
-                            <report>plugin-updates-report</report>
-                            <report>property-updates-report</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -253,17 +269,7 @@
 
     </reporting>
 
-
-
-
-
-
-
-
-
-
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
@@ -274,19 +280,25 @@
             <artifactId>tinylog</artifactId>
             <version>1.2</version>
         </dependency>
-        <dependency>
+       <!--
+       <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>org.clojure</groupId>
             <artifactId>java.jdbc</artifactId>
             <version>0.7.5</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
