--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,2 +1,3 @@
-tinylog.writer = file
-tinylog.writer.filename = log.txt
+tinylog.writer = console
+tinylog.writer.stream = err
+tinylog.writer.format = {date}\t{level}  {message}
